Done with the first screen(home screen) except the rotation stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Reddit Client</string>
+    <string name="ups_text">%d Ups</string>
+    <string name="comments_text">%d Comments</string>
+    <string name="base_link">https://www.reddit.com%s</string>
 </resources>
