--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="thumb_up">Thumb up</string>
     <string name="refresh_menu_text">Refresh</string>
     <string name="progress_menu">Progress</string>
+    <string name="post_tab_text">Post</string>
+    <string name="comments_tab">Comments</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
