--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="update_message_less_then_minute">Last update less than a minute ago</string>
+    <string name="update_message_more_than_minute">Last update %1$d %2$s ago</string>
+    <string name="minutes">minutes</string>
+    <string name="minute">minute</string>
 </resources>
