--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="info_when_internet_is_not_connected">Connect to the internet and press the refresh button</string>
     <string name="no_offline_data">No offline data available</string>
     <string name="no_post_selected">No post selected</string>
+    <string name="share_menu">Share</string>
+    <string name="share_message">Hi ! I want to share this post with you i hop you also find this one is interesting\n</string>
 </resources>
