--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,6 @@
     <string name="no_offline_data">No offline data available</string>
     <string name="no_post_selected">No post selected</string>
     <string name="share_menu">Share</string>
-    <string name="share_message">Hi ! I want to share this post with you i hop you also find this one is interesting\n %S</string>
+    <string name="share_message">Hi ! I want to share this post with you i hope you also find this one is interesting\n %S</string>
     <string name="fetching_data_failed">Failed to fetch data from server</string>
 </resources>
